--- a/index.html
+++ b/index.html
@@ -3,51 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Modern Slot Machine Game 🎰</title>
-  <meta name="description" content="Play a modern, responsive slot machine game online. Simple, fun, and built with pure JavaScript." />
-  <meta name="keywords" content="slot machine, casino game, JavaScript, web game, responsive, modern UI" />
-  <meta name="author" content="Mwihaki Githii" />
-
+  <meta name="description" content="Modern Slot Machine Game - Play and Win! 🎰 Responsive web slot game with sound and animations." />
+  <title>🎰 Modern Slot Machine Game</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main class="container">
-    <header class="header">
-      <h1>🎰 Slot Machine Game</h1>
-      <p class="subtitle">Test your luck and spin to win!</p>
-    </header>
+  <div class="container">
+    <h1>🎰 Slot Machine</h1>
 
-    <section class="balance-section">
-      <p>💰 Balance: $<span id="balance">0.00</span></p>
-    </section>
+    <div class="balance-section">
+      <p>Balance: $<span id="balance">0.00</span></p>
+    </div>
 
-    <section class="controls">
-      <div class="input-group">
-        <label for="lines">Lines (1-3)</label>
-        <input type="number" id="lines" min="1" max="3" value="3" />
-      </div>
+    <div class="deposit-section">
+      <input type="number" id="deposit" placeholder="Enter deposit (max $500)" />
+      <button id="deposit-btn">💰 Deposit</button>
+    </div>
 
-      <div class="input-group">
-        <label for="bet">Bet per Line</label>
-        <input type="number" id="bet" min="1" step="0.5" value="5" />
-      </div>
+    <div class="bet-section">
+      <input type="number" id="bet" placeholder="Enter bet amount" />
+      <button id="spin-btn">🎲 Spin</button>
+      <button id="play-again-btn">🔁 Play Again</button>
+    </div>
 
-      <button id="spin-btn" class="btn">SPIN 🎡</button>
-    </section>
+    <div id="result" class="message"></div>
 
-    <section class="slot-machine">
+    <div class="slot-machine">
       <div class="reel" id="reel-1"></div>
       <div class="reel" id="reel-2"></div>
       <div class="reel" id="reel-3"></div>
-    </section>
+    </div>
 
-    <p id="result" class="result">Press Spin to Start!</p>
-
-    <footer class="footer">
-      <p>Built by <strong>Canada-AI</strong> © 2025</p>
+    <footer>
+      <p>© 2025 Slot Machine Game | Built for fun 🎉</p>
     </footer>
-  </main>
+  </div>
 
   <script src="app.js"></script>
 </body>
-</html>
+</html
