--- a/index.html
+++ b/index.html
@@ -39,6 +39,47 @@
     </footer>
   </div>
 
+  <button id="paytable-btn" class="control-btn">ⓘ Paytable</button>
+
+<div id="paytable-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <h2>🎰 Paytable & Payout Rules</h2>
+
+        <p>Win by matching three symbols on any **horizontal row**.</p>
+        
+        <div class="payout-table-container">
+            <h3>Symbol Multipliers</h3>
+            <table>
+                <thead>
+                    <tr><th>Symbol</th><th>Payout Multiplier</th></tr>
+                </thead>
+                <tbody>
+                    <tr><td>A</td><td>5x</td></tr>
+                    <tr><td>B</td><td>4x</td></tr>
+                    <tr><td>C</td><td>3x</td></tr>
+                    <tr><td>D</td><td>2x</td></tr>
+                </tbody>
+            </table>
+        </div>
+        
+        <div class="calculation-example">
+            <h3>Payout Example (Assuming a $10 Bet)</h3>
+            <table>
+                <thead>
+                    <tr><th>Scenario</th><th>Calculation</th><th>Payout</th></tr>
+                </thead>
+                <tbody>
+                    <tr><td>A, A, A</td><td>$10 \times 5$</td><td><span class="win">\$50</span></td></tr>
+                    <tr><td>D, D, D</td><td>$10 \times 2$</td><td><span class="win">\$20</span></td></tr>
+                    <tr><td>C, B, D</td><td>No Match</td><td>\$0</td></tr>
+                </tbody>
+            </table>
+        </div>
+        <p>Total Winnings are the sum of all winning rows.</p>
+    </div>
+</div>
+
   <script src="app.js"></script>
 </body>
 </html
