--- a/index.html
+++ b/index.html
@@ -3,83 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Modern Slot Machine Game - Play and Win! 🎰 Responsive web slot game with sound and animations." />
-  <title>🎰 Modern Slot Machine Game</title>
+  <title>Modern Slot Machine Game 🎰</title>
+  <meta name="description" content="Play a modern, responsive slot machine game online. Simple, fun, and built with pure JavaScript." />
+  <meta name="keywords" content="slot machine, casino game, JavaScript, web game, responsive, modern UI" />
+  <meta name="author" content="Mwihaki Githii" />
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>🎰 Slot Machine</h1>
+  <main class="container">
+    <header class="header">
+      <h1>🎰 Slot Machine Game</h1>
+      <p class="subtitle">Test your luck and spin to win!</p>
+    </header>
 
-    <div class="balance-section">
-      <p>Balance: $<span id="balance">0.00</span></p>
-    </div>
+    <section class="balance-section">
+      <p>💰 Balance: $<span id="balance">0.00</span></p>
+    </section>
 
-    <div class="deposit-section">
-      <input type="number" id="deposit" placeholder="Enter deposit (max $500)" />
-      <button id="deposit-btn">💰 Deposit</button>
-    </div>
+    <section class="controls">
+      <div class="input-group">
+        <label for="lines">Lines (1-3)</label>
+        <input type="number" id="lines" min="1" max="3" value="3" />
+      </div>
 
-    <div class="bet-section">
-      <input type="number" id="bet" placeholder="Enter bet amount" />
-      <button id="spin-btn">🎲 Spin</button>
-      <button id="play-again-btn">🔁 Play Again</button>
-    </div>
+      <div class="input-group">
+        <label for="bet">Bet per Line</label>
+        <input type="number" id="bet" min="1" step="0.5" value="5" />
+      </div>
 
-    <div id="result" class="message"></div>
+      <button id="spin-btn" class="btn">SPIN 🎡</button>
+    </section>
 
-    <div class="slot-machine">
+    <section class="slot-machine">
       <div class="reel" id="reel-1"></div>
       <div class="reel" id="reel-2"></div>
       <div class="reel" id="reel-3"></div>
-    </div>
+    </section>
 
-    <footer>
-      <p>© 2025 Slot Machine Game | Built for fun 🎉</p>
+    <p id="result" class="result">Press Spin to Start!</p>
+
+    <footer class="footer">
+      <p>Built by <strong>Canada-AI</strong> © 2025</p>
     </footer>
-  </div>
-
-  <button id="paytable-btn" class="control-btn">ⓘ Paytable</button>
-
-<div id="paytable-modal" class="modal">
-    <div class="modal-content">
-        <span class="close-btn">&times;</span>
-        <h2>🎰 Paytable & Payout Rules</h2>
-
-        <p>Win by matching three symbols on any **horizontal row**.</p>
-        
-        <div class="payout-table-container">
-            <h3>Symbol Multipliers</h3>
-            <table>
-                <thead>
-                    <tr><th>Symbol</th><th>Payout Multiplier</th></tr>
-                </thead>
-                <tbody>
-                    <tr><td>A</td><td>5x</td></tr>
-                    <tr><td>B</td><td>4x</td></tr>
-                    <tr><td>C</td><td>3x</td></tr>
-                    <tr><td>D</td><td>2x</td></tr>
-                </tbody>
-            </table>
-        </div>
-        
-        <div class="calculation-example">
-            <h3>Payout Example (Assuming a $10 Bet)</h3>
-            <table>
-                <thead>
-                    <tr><th>Scenario</th><th>Calculation</th><th>Payout</th></tr>
-                </thead>
-                <tbody>
-                    <tr><td>A, A, A</td><td>$10 \times 5$</td><td><span class="win">\$50</span></td></tr>
-                    <tr><td>D, D, D</td><td>$10 \times 2$</td><td><span class="win">\$20</span></td></tr>
-                    <tr><td>C, B, D</td><td>No Match</td><td>\$0</td></tr>
-                </tbody>
-            </table>
-        </div>
-        <p>Total Winnings are the sum of all winning rows.</p>
-    </div>
-</div>
+  </main>
 
   <script src="app.js"></script>
 </body>
-</html
+</html>
